--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1 class="color">Propiedad color</h1>
     <h1 id="titulo">Titulo</h1>
     <p class="texto">Texto culo teta culo</p>
     <p class="texto especial">Texto culo teta culo</p>
